syntax = "proto3";
option java_package = "com.wind.im.proto";
option java_outer_classname = "SocketReplyProto";
//客户端应答
message SocketReply {

    //SocketReplyType Type = 1; //类型
    uint32 Type=1;//类型
    bytes Body = 2; //内容 JSON格式，根据类型确定
}