syntax = "proto3";
option java_package = "com.wind.im.proto";
option java_outer_classname = "SocketTalkProto";
//聊天
message SocketTalk {
    //消息类型
    enum TalkMsgType {
        TEXT = 0; // 文本
    }

    enum TalkSessionType {
        P2P = 0; //点对点
        ROOM = 1; //聊天室
        GROUP = 2; //群聊 暂无
    }

    int64 From = 1; //发送者账号
    int64 To = 2; //接收者
    TalkMsgType Type = 3; //消息类型
    bytes Body = 4; //消息具体内容 JSON格式
    string UUID = 5; //消息唯一标识
    int64 Timestamp = 6; //时间戳
    TalkSessionType SessionType = 7; //消息类型
    bytes Option = 8; //保留字段，指定消息特殊行为选项 JSON格式
    string Pushcontent = 9; //推送文案
    bytes Ext = 10; //开发者扩展字段 JSON格式
    uint32 Direction = 11; //消息方向 0：发送消息；1：接收消息
    uint32 MsgAck = 12; //是否需要已读回执 0：不需要；1：需要 保留字段目前无该功能

}